--- a/bootstrap-5.1.3-dist/wizat/page4.html
+++ b/bootstrap-5.1.3-dist/wizat/page4.html
@@ -5,12 +5,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page4</title>
+    <title>Page4 List</title>
+    <style>
+        body {
+            background-color: beige;
+        }
+    </style>
 </head>
 
 <body>
     <center>
-        <h1>Page 4</h1>
+        <h1>Page 4 List</h1>
+        <hr>
+        <h1>Sector 1</h1>
+        <p>Head sub</p>
+        <ol type="A">
+            <!-- ol เป็น list ที่มีการเรียงลำดับที่ชัดเจน type เลือก ประเภทการเรียงข้อมูล-->
+            <li><b>
+                <ul type="square">
+                    <li>sub set 1</li>
+                    <li>sub set 2</li>
+                    <li>sub set 3</li>
+                </ul>
+            </b>
+            </li>
+            <li>sub2</li>
+            <li>sub3</li>
+        </ol>
+        <hr>
+        <h1>Sector 2</h1>
+        <ul type="square">
+            <!-- ul ไม่มีการเรียงลำดับจะแสดงเป็นแบบ สัญลักษณ์ -->
+            <!-- Type มี disc , square , circle -->
+            <li>set1</li>
+            <li>set2</li>
+            <li>set3</li>
+        </ul>
+        <hr>
         <a href="..//index.html">home page</a> <!-- .. ใช้สำหรับกลับไปก่อนหน้า-->
     </center>
 </body>
