--- a/bootstrap-5.1.3-dist/page3.html
+++ b/bootstrap-5.1.3-dist/page3.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page 3</title>
+    <style>
+        body {
+            background-color: beige;
+        }
+    </style>
 </head>
 <body>
     <center>
         <h1>Page 3</h1>
 
     </center>
+
+    <a href="index.html">home page</a>
 </body>
 </html>
