--- a/bootstrap-5.1.3-dist/page3.html
+++ b/bootstrap-5.1.3-dist/page3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,14 +10,38 @@
         body {
             background-color: beige;
         }
+
+        div {
+            border: 1px solid black;
+        }
+
+        span {
+            border: 1px solid red;
+        }
     </style>
 </head>
+
 <body>
     <center>
         <h1>Page 3</h1>
+        <span style="color: purple;">
+            <h1>my name is</h1>
+            <span>mother</span>
+            <span>mother</span>
+            <span>mother</span>
+        </span>
+        <div style="color: red;">
+            <h1>you die</h1>
+            <div>father</div>
+            <div>father</div>
+            <div>father</div>
+        </div>
+        <!-- div เหมือนใช้ br-->
 
     </center>
 
     <a href="index.html">home page</a>
+
 </body>
+
 </html>
