--- a/bootstrap-5.1.3-dist/index.html
+++ b/bootstrap-5.1.3-dist/index.html
@@ -50,6 +50,12 @@
             src="https://media.istockphoto.com/photos/hands-forming-a-heart-shape-with-sunset-silhouette-picture-id636379014?k=20&m=636379014&s=612x612&w=0&h=Zb6EobVr_BR278tpANKvKzfcQMIz-P_2Tv3XVXZufAM=" width="160px" height="120px"
             alt="Doramon" srcset=""> Page 4 : list </a><br> <!-- alt คำอธิบายรูปภาพ และสามารถใส่ลิงก์ในรูปภาพได้-->
     <a href="page5.html" >page 5 HTML Form </a><br>        
+    <a href="page6.html">Page 6 Block VS inline</a><br>
+    <a href="page7.html">Page 7 Class & ID</a><br>
+    <a href="page8.html">Page 8 Semantic Tag</a><br>
+    <a href="page9.html">Page 9 HTML Entity</a><br>
+    <a href="page10.html">Page 10 Video</a><br>
+    <a href="page11.html">Page 11 Sound</a><br>
 </body>
 
 </html>
