--- a/Css3/index.html
+++ b/Css3/index.html
@@ -61,6 +61,14 @@
      <article>แต่ถ้ามีมากกว่า 1 Property ต้องแยกด้วยเครื่องหมาย ; (semi-colon)</article>
      <div><b><ins>ตัวอย่าง</ins></b></div> 
      <div>selector {property : value ; property : value ; ...}</div>
+     <hr color="black">
+     <h1 align="center" style="color: red;">สารบัญ</h1>
+     <ol>
+        <li><a href="sec1.html">Sec 1 : การประกาศ selector</a></li>
+        <li><a href="sec2.html">Sec 2 : การกำหนดชนิดฟอนต์ </a></li>
+        <li><a href="sec3.html">Sec 3 : </a></li>
+     </ol>
+
 </body>
 
 </html>
