--- a/bootstrap-5.1.3-dist/index.html
+++ b/bootstrap-5.1.3-dist/index.html
@@ -10,46 +10,96 @@
     <meta name="keywords" content="trader crypto blockchain">
 
     <!--หัวข้อ website-->
-    <title>WIZAT</title>
+    <title>Learning HTML 5 </title>
     <style>
         body {
             background-color: beige;
         }
+
+        article {
+            color: deeppink;
+            font-size: 30px;
+        }
+
+        td {
+            text-align: center;
+        }
     </style>
+
 </head>
 
 <!-- ส่วนเนื้อหาหน้าเว็บ -->
 
 <body>
-    <center>
+    <h1 align="center" style="color: red;">Learning HTML 5</h1>
 
-        <h1>Learning HTML 5</h1>
-        <small>small</small><br>
-        <!--ตัวพิมพ์เล็ก-->
-        <strong>strong</strong> <br>
-        <!--ตัวพิมพ์ใหญ่-->
-        <b><i>bold</i></b> <br>
-        <!--ตัวหนา และ เอียง-->
-        <mark>hilight</mark>
-        <!--hilight ข้อความ-->
-        <p> E=MC<sup>2</sup></p>
-        <!--ตัวอักษรยกขึ้นไป-->
-        H<sub>2</sub>o
-        <hr>
-        <!--ตัวอักษรห้อยด้านล่าง , <hr> เส้นคั่นหน้า -->
-        <p><ins>underline</ins></p>
-        <!--ขีดเส้นใต้-->
+    <article>ตัวอย่างตัวอักษร</article><br>
+    <table border="1px" width="80%">
+        <thead>
+            <th>Tag</th>
+            <th>example</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="tag">
+                    < small>
+                </td>
+                <td><small>small</small></td>
+            </tr>
+            <tr>
+                <td class="tag">
+                    < strong>
+                </td>
+                <td><strong>Strong</strong></td>
+            </tr>
+            <tr>
+                <td>
+                    < b>
+                </td>
+                <td><b>Bold</b></td>
+            </tr>
+            <tr>
+                <td>
+                    < i>
+                </td>
+                <td><i>italic</i></td>
+            </tr>
+            <tr>
+                <td>
+                    < mark>
+                </td>
+                <td><mark>hilight</mark></td>
+            </tr>
+            <tr>
+                <td>
+                    < sup>
+                </td>
+                <td>E=mc<sup>2</sup></td>
+            </tr>
+            <tr>
+                <td>
+                    < sub>
+                </td>
+                <td>H<sub>2</sub>O</td>
+            </tr>
+            <tr>
+                <td>
+                    < ins>
+                </td>
+                <td><ins>underline</ins></td>
+            </tr>
+        </tbody>
+    </table><br>
+    <hr color="black">
+
+    <article>สารบัญ</article><br>
 
 
 
-    </center>
     <a href="page2.html">page 2 การสร้างตาราง</a><br>
-    <a href="page3.html" >page 3 Div , Span </a><br>
-    <a href="https://www.facebook.com/passavit.gunn/" target="_blank">My facebook Profile</a><br>
-    <a href="wizat/page4.html" target="_blank"><img
-            src="https://media.istockphoto.com/photos/hands-forming-a-heart-shape-with-sunset-silhouette-picture-id636379014?k=20&m=636379014&s=612x612&w=0&h=Zb6EobVr_BR278tpANKvKzfcQMIz-P_2Tv3XVXZufAM=" width="160px" height="120px"
-            alt="Doramon" srcset=""> Page 4 : list </a><br> <!-- alt คำอธิบายรูปภาพ และสามารถใส่ลิงก์ในรูปภาพได้-->
-    <a href="page5.html" >page 5 HTML Form </a><br>        
+    <a href="page3.html">page 3 Div , Span </a><br>
+    <a href="/bootstrap-5.1.3-dist/wizat/page4.html">page 4 list</a><br>
+    <a href="page5.html">page 5 HTML Form </a><br>
     <a href="page6.html">Page 6 Block VS inline</a><br>
     <a href="page7.html">Page 7 Class & ID</a><br>
     <a href="page8.html">Page 8 Semantic Tag</a><br>
