--- a/Css3/index.html
+++ b/Css3/index.html
@@ -66,7 +66,7 @@
      <ol>
         <li><a href="sec1.html">Sec 1 : การประกาศ selector</a></li>
         <li><a href="sec2.html">Sec 2 : การกำหนดชนิดฟอนต์ </a></li>
-        <li><a href="sec3.html">Sec 3 : </a></li>
+        <li><a href="sec3.html">Sec 3 : พื้นที่ต่างๆ </a></li>
      </ol>
     
 </body>
