--- a/Css3/index.html
+++ b/Css3/index.html
@@ -67,6 +67,7 @@
         <li><a href="sec1.html">Sec 1 : การประกาศ selector</a></li>
         <li><a href="sec2.html">Sec 2 : การกำหนดชนิดฟอนต์ </a></li>
         <li><a href="sec3.html">Sec 3 : พื้นที่ต่างๆ </a></li>
+        <li><a href="sec4.html">Sec 4 : Display </a></li>
      </ol>
     
 </body>
