cursor shadow-box

--- a/Css3/index.html
+++ b/Css3/index.html
@@ -68,6 +68,12 @@
         <li><a href="sec2.html">Sec 2 : การกำหนดชนิดฟอนต์ </a></li>
         <li><a href="sec3.html">Sec 3 : พื้นที่ต่างๆ </a></li>
         <li><a href="sec4.html">Sec 4 : Display </a></li>
+        <li><a href="sec5.html">Sec 5 : Overflow </a></li>
+        <li><a href="sec6.html">Sec 6 : Cursor style </a></li>
+        <li><a href="sec7.html">Sec 7 : กำหนดเงาด้วย box - shadow </a></li>
+        <li><a href="sec8.html">Sec 8 : กำหนดค่าความทึบ Opacity </a></li>
+        <li><a href="sec9.html">Sec 9 : Responsive Web design </a></li>
+        <li><a href="sec10.html">Sec 10 :  </a></li>
      </ol>
     
 </body>
