--- a/Css3/sec4.html
+++ b/Css3/sec4.html
@@ -8,9 +8,10 @@
     <title>Sec 4 Display</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        body{
+        body {
             height: 3000px;
         }
+
         .box {
             width: 100px;
             height: 100px;
@@ -53,7 +54,8 @@
             position: sticky;
             top: 0;
         }
-        .contrain{
+
+        .contrain {
             width: 300px;
             height: 300px;
             position: relative;
@@ -61,11 +63,20 @@
             border: dotted 5px red;
         }
     </style>
+    <style>
+        h2 {
+            color: red !important;
+        }
+
+        .test {
+            color: aqua;
+        }
+    </style>
 </head>
 
 <body>
-    
-    <a href="index.html" style="position: sticky;top: 0;" >Home page</a>
+
+    <a href="index.html" style="position: sticky;top: 0;">Home page</a>
     <h1>Display</h1>
     <hr>
     <article>Display คือการจัดรูปแบบการแสดงผล</article>
@@ -101,7 +112,16 @@
     </div>
     <div class="box" id="id-4"></div>
     <div class="box" id="id-5"></div>
+    <a href="index.html">Home page</a>
+    <hr><br>
+    <article>ลำดับความสำคัญ Style</article>
+    <ul>
+        <li>ความสำคัญจากล่างขึ้นบน</li>
+        <li>!impotant กำหนดให้มีความสำคัญที่สุด</li>
+    </ul>
 
+    <section>Example</section><br>
+    <h2 class="test">Hello world </h2>
 
 </body>
 
