--- a/Css3/sec9.html
+++ b/Css3/sec9.html
@@ -9,7 +9,24 @@
 </head>
 <body>
     <a href="index.html">Home page</a>
-    <h1>Responsive Web design</h1><hr>
-    <div>การออบแบบเว็บเพื่อตอบสนองและแสดงผลได้ดีในทุกๆอุปกรณ์</div> 
+    <h1>Responsive Web design</h1><hr><br>
+    <div>การออบแบบเว็บเพื่อตอบสนองและแสดงผลได้ดีในทุกๆอุปกรณ์</div> <br><hr>
+    <article>Media Query</article>    
+    <div>คือ การเขียนรูปแบบ Style ให้แสดงผลตามหน้าจอที่แตกต่างกัน</div><br>
+    <div>ความกว้างอุปกรณ์</div>
+    <ul>
+        <li>320px - 480px : Mobile devices</li>
+        <li>481px - 768px : Ipads , Tablets</li>
+        <li>769px - 1024px : laptops</li>
+        <li>1025px - 1200px : Desktops</li>
+        <li>1201px + : TV , Widescreen</li>
+    </ul>
+    <hr>
+    <article>Example</article>
+    <div id="smartphone">smart phone</div>
+    <div id="tablets">Tablets</div>
+    <div id="normal">Laptops</div>
+    <div id="Widescreen">TV</div>
+
 </body>
 </html>
