--- a/Css3/sec9.html
+++ b/Css3/sec9.html
@@ -27,6 +27,18 @@
     <div id="tablets">Tablets</div>
     <div id="normal">Laptops</div>
     <div id="Widescreen">TV</div>
-
+    <div>ปรับขยายหน้าจอแล้วจะเปลี่ยนไปตามแต่ละค่าที่กำหนดไว้</div><br><hr>
+    <article>Viewport Units</article>
+    <section>องค์ประกอบ</section>
+    <ul>
+        <li>VW = ความกว้าง</li>
+        <li>VH = ความสูง</li>
+        <li>vmin = ค่า % ต่ำสุดของ viewport</li>
+        <li>vmax = ค่า % สูงสุดของ viewport</li>
+    </ul>
+    <a href=viewport.html>ตัวอย่าง</a>
+    <hr><br>
+    
+    
 </body>
 </html>
