--- a/Css3/index.html
+++ b/Css3/index.html
@@ -73,7 +73,7 @@
         <li><a href="sec7.html">Sec 7 : กำหนดเงาด้วย box - shadow </a></li>
         <li><a href="sec8.html">Sec 8 : กำหนดค่าความทึบ Opacity </a></li>
         <li><a href="sec9.html">Sec 9 : Responsive Web design </a></li>
-        <li><a href="sec10.html">Sec 10 :  </a></li>
+        <li><a href="sec10.html">Sec 10 : Flexbox </a></li>
      </ol>
     
 </body>
