--- a/Css3/sec10.html
+++ b/Css3/sec10.html
@@ -82,7 +82,24 @@
         <li><span>flex - basis = </span>กำหนดค่าความยืดหยุ่นเบื้องต้น</li>
         <li><span>flex:1 = </span>ทำให้ item ในแถวเดียวกันมีขนาดเท่ากัน</li>
     </ul>
-
-
+    <hr>
+    <article>Justify-content</article>
+    <div>เทียบกับแกนหลัก</div>
+    <ul>
+        <li>flex-start = ชิดซ้ายทิศทางตามแนวนอน</li>
+        <li>center = ตรงกลาง</li>
+        <li>flex-end = ชิดขวาทิศทางตามแนวนอน</li>
+        <li>space-between = ระยะห่างซ้าย ขวา และขนาด item เท่ากัน (ติดมุม)</li>
+        <li>space-around  = ระยะห่างซ้าย ขวา และขนาด item เท่ากัน</li>
+    </ul>
+    <hr>
+    <article>Flex Alignment</article>
+    <ul>
+        <li><span>stretch = </span>ขนาด item เท่ากับ container</li>
+        <li><span>Flex-start = </span>ด้านบน container</li>
+        <li><span>center = </span>กลาง container</li>
+        <li><span>flex-end = </span>ด้านล่าง container</li>
+        <li><span>align-self = </span>ปรับแต่งเฉพาะบาง item</li>
+    </ul>
 </body>
 </html>
