--- a/Css3/index.html
+++ b/Css3/index.html
@@ -74,6 +74,8 @@
         <li><a href="sec8.html">Sec 8 : กำหนดค่าความทึบ Opacity </a></li>
         <li><a href="sec9.html">Sec 9 : Responsive Web design </a></li>
         <li><a href="sec10.html">Sec 10 : Flexbox </a></li>
+        <li><a href="sec11.html">Sec 11 : CSS Grid Layout </a></li>
+        <li><a href="sec12.html">Sec 12 : Advance Selectors </a></li>
      </ol>
     
 </body>
