--- a/Css3/index.html
+++ b/Css3/index.html
@@ -76,6 +76,11 @@
         <li><a href="sec10.html">Sec 10 : Flexbox </a></li>
         <li><a href="sec11.html">Sec 11 : CSS Grid Layout </a></li>
         <li><a href="sec12.html">Sec 12 : Advance Selectors </a></li>
+        <li><a href="sec13.html">Sec 13 : การกำหนดเงาข้อความด้วย Text - shadow </a></li>
+        <li><a href="sec14.html">Sec 14 : CSS Variable </a></li>
+        <li><a href="sec15.html">Sec 15 : จัดการ element ด้วย Transform </a></li>
+        <li><a href="sec16.html">Sec 16 : เปลี่ยนแปลง Element ด้วย Transition</a></li>
+        <li><a href="sec17.html">Sec 17 : CSS Animation</a></li>
      </ol>
     
 </body>
