--- a/Css3/sec13.html
+++ b/Css3/sec13.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sec 6</title>
+    <title>sec 13 การกำหนดเงาข้อความด้วย Text - shadow</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .test {
+
+            text-shadow: 5px 10px 3px red;
+
+        }
+    </style>
 </head>
+
 <body>
     <a href="index.html">Home page</a>
+    <h1>การกำหนดเงาข้อความด้วย Text - shadow</h1><br>
+    <article>text-shadow : x y blur color</article>
+    <ul>
+        <li><span>X</span> : เงาแกน x (+ ขวา , - ซ้าย)</li>
+        <li><span>Y</span> : เงาแกน y (+ ล่าง , - บน)</li>
+        <li><span>Blur</span> : ความมัวของเงา</li>
+        <li><span>Color</span> : สีของเงา</li>
+    </ul>
+    <div><b>Example</b></div><br>
+    <div class="test">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, sit!</div>
 
 
 
-
-    
 </body>
+
 </html>
