--- a/Javascrip/index.html
+++ b/Javascrip/index.html
@@ -50,7 +50,8 @@
         <li><a href="sec10.html">Sec 10 : Function</a></li>
         <li><a href="sec11.html">Sec 11 : Function แบบกำหนดค่าเริ่มต้น</a></li>
         <li><a href="sec12.html">Sec 12 : Array Properties</a></li>
-        <li><a href="sec13.html">Sec 13 : เข้าถึงสมาชิก arrey ด้วย for loop</a></li>        
+        <li><a href="sec13.html">Sec 13 : เข้าถึงสมาชิก arrey ด้วย for loop , for each</a></li>        
+        <li><a href="sec14.html">Sec 14 : แปลง arrey เป็น string</a></li>    
     </ol>
 </body>
 
