--- a/Javascrip/sec15.html
+++ b/Javascrip/sec15.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sec 14 : แปลง arrey เป็น string</title>
+    <title>Sec 13 : โครงสร้างควบคุม</title>
     <link rel="stylesheet" href="style.css">
     <script src="/Javascrip/javascrip.js"></script>
 </head>
 <body>
-    <a href="/HTML-Kongruksiam/Javascrip/index.html">Home page</a>
-    <h1>แปลง arrey เป็น string</h1>
+    <a href="/HTML-Kongruksiam/Javascrip/index.html">homepage</a>
 </body>
 </html>
