--- a/Javascrip/sec13.html
+++ b/Javascrip/sec13.html
@@ -6,15 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sec 13 : เข้าถึงสมาชิก arrey ด้วย for loop</title>
     <link rel="stylesheet" href="style.css">
-    <script src="/Javascrip/javascrip.js"></script>
+    
 </head>
 <body>
     <a href="/Javascrip/index.html">Home page</a>
-    <h1>เข้าถึงสมาชิก arrey ด้วย for loop</h1>
+    <h1>เข้าถึงสมาชิก arrey ด้วย for loop , for each</h1>
     <div>for (let i = 0 ; i < name.length ; i++ )</div>
     <div>{console.log(color[i]);}</div>
+    <br>
+    <article>เข้าถึงด้วย for each</article>
+    <div>function mydata(item) {console.log(item);}</div>
 
     <script>
+
+        // for loop 
+
         let color = ['red' , 'white' , 'pink' , 'black']
 
         console.log(color[0])
@@ -23,6 +29,13 @@
             console.log(color[i])
         }
 
+        // for each
+
+        color.forEach(data);
+
+        function data(item){
+            console.log('foreach',item);
+        }
     </script>
 
 
