--- a/Javascrip/index.html
+++ b/Javascrip/index.html
@@ -51,7 +51,16 @@
         <li><a href="sec11.html">Sec 11 : Function แบบกำหนดค่าเริ่มต้น</a></li>
         <li><a href="sec12.html">Sec 12 : Array Properties</a></li>
         <li><a href="sec13.html">Sec 13 : เข้าถึงสมาชิก arrey ด้วย for loop , for each</a></li>        
-        <li><a href="sec14.html">Sec 14 : แปลง arrey เป็น string</a></li>    
+        <li><a href="sec14.html">Sec 14 : แปลง arrey เป็น string</a></li>  
+        <li><a href="sec15.html">Sec 15 : การรวม , เรียง Array</a></li>    
+        <li><a href="sec16.html">Sec 16 : Javascrip Object</a></li>    
+        <li><a href="sec17.html">Sec 17 : การยืนยันด้วย confirm</a></li> 
+        <li><a href="sec18.html">Sec 18 : HTML DOM</a></li> 
+        <li><a href="sec19.html">Sec 19 : การเข้าถึง HTML element</a></li> 
+        <li><a href="sec20.html">Sec 20 : DOM Nodes</a></li> 
+        <li><a href="sec21.html">Sec 21 : DOM CSS Add & Remove Class</a></li> 
+        <li><a href="sec22.html">Sec 22 : DOM Event</a></li> 
+        <li><a href="sec23.html">Sec 23 : Event Listener</a></li> 
     </ol>
 </body>
 
