--- a/Bootstrap/bootstrap-5.1.3-dist/index.html
+++ b/Bootstrap/bootstrap-5.1.3-dist/index.html
@@ -79,10 +79,53 @@
         <li>bg-danger</li>
     </ul>
 
+    <div style="color: red;">หัวข้อที่ 3 - Alignment & Display</div>
+    <div class="fw-bold">Text alignment ใช้ class</div>
+    <ul>
+        <li class="text-start">text - start</li>
+        <li class="text-center">text - center</li>
+        <li class="text-end">text - end</li>
+    </ul>
+    <div class="fw-bold">display ใส่ class</div>
+    <ul class="bg-success d-inline-block">
+        <li>d-none - ไม่มีการแสดงผล</li>
+        <li>d-block - เรียงแนวตั้ง</li>
+        <li>d-inline - แนวนอน</li>
+        <li>d-inline - block - แนวนอนและขยายพื้นที่ด้านใน</li>
+        <li>d-block - แปลงเป็น block</li>
+    </ul>
 
+    <div style="color: red;">หัวข้อที่ 4 - Float & Flixed position</div>
+    <ul>
+        <li>Float- [start , end , none] เพิ่ม class clearfix จะทำให้เนื้อหาอื่นไม่ขึ้นมาแทรก </li>
+        <li>Fixed-[top , bottom , sticky-top (เนื้อหาจะติดขอบเมื่อเลื่อนลงมาถึง)]</li>
+        <li>visible / invisible</li>
+    </ul>
+    <div class="fw-bold"></div>
 
-
-
+    <div style="color: red;">หัวข้อที่ 5 - Margin</div>
+    <div>กำหนดระยะห่างภายนอก element กับวัตถุอื่น ใช้ class = m[position]-[size] </div>
+    <div><u> Ex.</u> mb-0 , mt-1 , ms-2 , me-3</div>
+    <div class="fw-bold">Position</div>
+    <ul>
+        <li>t = top</li>
+        <li>b = bottom</li>
+        <li>s = left</li>
+        <li>e = right</li>
+        <li>x = left , right</li>
+        <li>y = top , bottom</li>
+        <li>blank = 4 ทิศทาง</li>
+    </ul>
+    <div class="fw-bold">size</div>
+    <ul>
+        <li>0 = (x=0 , y=0)</li>
+        <li>1 = (x= spancer * 0.25 , y= spancer * 0.25)</li>
+        <li>2 = (x= spancer * 0.5 , y= spancer * 0.5)</li>
+        <li>3 = (x= spancer , y= spancer )</li>
+        <li>4 = (x= spancer * 1.5 , y= spancer * 1.5)</li>
+        <li>5 = (x= spancer * 3 , y= spancer * 3)</li>
+        <li>Auto</li>
+    </ul>
 </body>
 
 </html>
