--- a/Bootstrap/bootstrap-5.1.3-dist/index.html
+++ b/Bootstrap/bootstrap-5.1.3-dist/index.html
@@ -126,6 +126,14 @@
         <li>5 = (x= spancer * 3 , y= spancer * 3)</li>
         <li>Auto</li>
     </ul>
+    <div style="color: red;">หัวข้อที่ 6 - Padding</div>
+    <div>กำหนดระยะห่างภายใน element ใช้ class = p[position]-[size] </div>
+    <div><u> Ex.</u> pb-0 , pt-1 , ps-2 , pe-3</div>
+    <div style="color: red;">หัวข้อที่ 7 - กำหนดขนาด</div>
+    <ul>
+        <li>w (width) กำหนดความกว้าง</li>
+        <li>h (height) กำหนดความสูง</li>
+    </ul>
 </body>
 
 </html>
